--- a/MikuMikuLibrary/MikuMikuLibrary.csproj
+++ b/MikuMikuLibrary/MikuMikuLibrary.csproj
@@ -60,13 +60,32 @@
     <Compile Include="Databases\SpriteDatabase.cs" />
     <Compile Include="Databases\StageDatabase.cs" />
     <Compile Include="Databases\StringArray.cs" />
+    <Compile Include="IO\BinaryFormat.cs" />
+    <Compile Include="IO\BinaryFormatUtilities.cs" />
+    <Compile Include="IO\Common\AddressSpace.cs" />
+    <Compile Include="IO\IBinaryFile.cs" />
+    <Compile Include="IO\Sections\BinaryFileSection.cs" />
+    <Compile Include="IO\Sections\DatabaseSections.cs" />
+    <Compile Include="IO\Sections\EndOfFileSection.cs" />
+    <Compile Include="IO\Sections\ModelSections.cs" />
+    <Compile Include="IO\Sections\RelocationTableSection.cs" />
+    <Compile Include="IO\Sections\Section.cs" />
+    <Compile Include="IO\Sections\SectionInfo.cs" />
+    <Compile Include="IO\Sections\SectionManager.cs" />
+    <Compile Include="IO\Sections\SectionT.cs" />
+    <Compile Include="IO\Sections\TextureSetSections.cs" />
+    <Compile Include="Materials\MaterialTexture.cs" />
+    <Compile Include="Misc\Half.cs" />
+    <Compile Include="Misc\HalfUtilities.cs" />
     <Compile Include="Models\BoundingSphere.cs" />
+    <Compile Include="Models\MeshSkin.cs" />
     <Compile Include="Processing\Materials\MaterialCreator.cs" />
     <Compile Include="Processing\Models\AssimpModelExporter.cs" />
     <Compile Include="Processing\Models\AssimpModelImporter.cs" />
     <Compile Include="Processing\Models\AssimpSceneUtilities.cs" />
     <Compile Include="Processing\Models\NvTriStripUtilities.cs" />
     <Compile Include="Processing\Sprites\SpriteCropper.cs" />
+    <Compile Include="Processing\Sprites\SpriteOrganizer.cs" />
     <Compile Include="Processing\Textures\DDS\DDSCodec.cs" />
     <Compile Include="Processing\Textures\DDS\DDSFormatDetails.cs" />
     <Compile Include="Processing\Textures\DDS\DDSHeader.cs" />
@@ -98,15 +117,15 @@
     <Compile Include="Textures\TextureFormat.cs" />
     <Compile Include="Textures\TextureSet.cs" />
     <Compile Include="Textures\SubTexture.cs" />
-    <Compile Include="IO\AlignmentUtilities.cs" />
-    <Compile Include="IO\EndianBinaryReader.cs" />
-    <Compile Include="IO\EndianBinaryWriter.cs" />
+    <Compile Include="IO\Common\AlignmentUtilities.cs" />
+    <Compile Include="IO\Common\EndianBinaryReader.cs" />
+    <Compile Include="IO\Common\EndianBinaryWriter.cs" />
     <Compile Include="IO\Endianness.cs" />
-    <Compile Include="IO\EndiannessSwapUtilities.cs" />
-    <Compile Include="IO\StreamExtensions.cs" />
-    <Compile Include="IO\StreamView.cs" />
-    <Compile Include="IO\StringBinaryFormat.cs" />
-    <Compile Include="IO\UnsafeUtilities.cs" />
+    <Compile Include="IO\Common\EndiannessSwapUtilities.cs" />
+    <Compile Include="IO\Common\StreamExtensions.cs" />
+    <Compile Include="IO\Common\StreamView.cs" />
+    <Compile Include="IO\Common\StringBinaryFormat.cs" />
+    <Compile Include="IO\Common\UnsafeUtilities.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Misc\Tag.cs" />
   </ItemGroup>
@@ -128,5 +147,6 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
