--- a/MikuMikuModel/packages.config
+++ b/MikuMikuModel/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="AssimpNet" version="4.1.0" targetFramework="net471" />
   <package id="OpenTK" version="3.0.1" targetFramework="net471" />
   <package id="OpenTK.GLControl" version="3.0.1" targetFramework="net471" />
 </packages>
