Refactoring of section classes

--- a/MikuMikuLibrary/MikuMikuLibrary.csproj
+++ b/MikuMikuLibrary/MikuMikuLibrary.csproj
@@ -69,17 +69,17 @@
     <Compile Include="IO\AddressSpace.cs" />
     <Compile Include="IO\Common\VectorBinaryFormat.cs" />
     <Compile Include="IO\IBinaryFile.cs" />
-    <Compile Include="IO\Sections\BinaryFileSection.cs" />
     <Compile Include="IO\Sections\DatabaseSections.cs" />
+    <Compile Include="IO\Sections\BinaryFileSection.cs" />
+    <Compile Include="IO\Sections\EndianReverseTableSection.cs" />
     <Compile Include="IO\Sections\EndOfFileSection.cs" />
-    <Compile Include="IO\Sections\EnrsSection.cs" />
+    <Compile Include="IO\Sections\ISection.cs" />
     <Compile Include="IO\Sections\ModelSections.cs" />
-    <Compile Include="IO\Sections\RelocationTableSection.cs" />
+    <Compile Include="IO\Sections\RelocationTableSections.cs" />
     <Compile Include="IO\Sections\Section.cs" />
     <Compile Include="IO\Sections\SectionInfo.cs" />
-    <Compile Include="IO\Sections\SectionManager.cs" />
-    <Compile Include="IO\Sections\SectionT.cs" />
-    <Compile Include="IO\Sections\SpriteSetSections.cs" />
+    <Compile Include="IO\Sections\SectionRegistry.cs" />
+    <Compile Include="IO\Sections\SpriteSetSection.cs" />
     <Compile Include="IO\Sections\TextureSetSection.cs" />
     <Compile Include="Materials\MaterialTexture.cs" />
     <Compile Include="Maths\AxisAlignedBoundingBox.cs" />
