--- a/MikuMikuLibrary/MikuMikuLibrary.csproj
+++ b/MikuMikuLibrary/MikuMikuLibrary.csproj
@@ -37,9 +37,6 @@
     <Reference Include="AssimpNet, Version=4.1.0.0, Culture=neutral, PublicKeyToken=0d51b391f59f42a6, processorArchitecture=MSIL">
       <HintPath>..\packages\AssimpNet.4.1.0\lib\net40\AssimpNet.dll</HintPath>
     </Reference>
-    <Reference Include="NvTriStripDotNet">
-      <HintPath>.\NvTriStripDotNet.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
@@ -86,11 +83,22 @@
     <Compile Include="Misc\Half.cs" />
     <Compile Include="Misc\HalfUtilities.cs" />
     <Compile Include="Maths\BoundingSphere.cs" />
-    <Compile Include="Models\MeshSkin.cs" />
-    <Compile Include="Models\ModelExporter.cs" />
-    <Compile Include="Models\ModelImporter.cs" />
-    <Compile Include="Models\SceneUtilities.cs" />
-    <Compile Include="Models\TriangleStripUtilities.cs" />
+    <Compile Include="Models\Skin.cs" />
+    <Compile Include="Models\Processing\Assimp\Extensions.cs" />
+    <Compile Include="Models\Processing\Assimp\Exporter.cs" />
+    <Compile Include="Models\Processing\Assimp\Importer.cs" />
+    <Compile Include="Models\Processing\Assimp\SceneUtilities.cs" />
+    <Compile Include="Models\Processing\Stripifier\EdgeInfo.cs" />
+    <Compile Include="Models\Processing\Stripifier\FaceInfo.cs" />
+    <Compile Include="Models\Processing\Stripifier\NvStripifier.cs" />
+    <Compile Include="Models\Processing\Stripifier\PrimitiveGroup.cs" />
+    <Compile Include="Models\Processing\Stripifier\PrimitiveType.cs" />
+    <Compile Include="Models\Processing\Stripifier\Stripifier.cs" />
+    <Compile Include="Models\Processing\Stripifier\StripInfo.cs" />
+    <Compile Include="Models\Processing\Stripifier\StripStartInfo.cs" />
+    <Compile Include="Models\Processing\Stripifier\Utils.cs" />
+    <Compile Include="Models\Processing\Stripifier\VertexCache.cs" />
+    <Compile Include="Models\Processing\Stripifier.cs" />
     <Compile Include="Sprites\SpriteCropper.cs" />
     <Compile Include="Sprites\SpriteOrganizer.cs" />
     <Compile Include="Textures\DDS\DDSCodec.cs" />
@@ -115,7 +123,7 @@
     <Compile Include="Models\IndexTable.cs" />
     <Compile Include="Materials\Material.cs" />
     <Compile Include="Models\Mesh.cs" />
-    <Compile Include="Models\MeshExData.cs" />
+    <Compile Include="Models\ExData.cs" />
     <Compile Include="Models\Model.cs" />
     <Compile Include="Models\SubMesh.cs" />
     <Compile Include="Textures\Texture.cs" />
@@ -138,7 +146,9 @@
     <None Include="app.config" />
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Models\Processing\FBX\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\AssimpNet.4.1.0\build\AssimpNet.targets" Condition="Exists('..\packages\AssimpNet.4.1.0\build\AssimpNet.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
