--- a/MikuMikuModel/MikuMikuModel.csproj
+++ b/MikuMikuModel/MikuMikuModel.csproj
@@ -71,14 +71,14 @@
     <Compile Include="DataNodes\DataNode.cs" />
     <Compile Include="DataNodes\DataNodeFactory.cs" />
     <Compile Include="DataNodes\DataNodeT.cs" />
-    <Compile Include="DataNodes\MeshExDataNode.cs" />
+    <Compile Include="DataNodes\ExDataNode.cs" />
     <Compile Include="DataNodes\FarcArchiveNode.cs" />
     <Compile Include="DataNodes\IndexTableNode.cs" />
     <Compile Include="DataNodes\ListNode.cs" />
     <Compile Include="DataNodes\MaterialNode.cs" />
     <Compile Include="DataNodes\MaterialTextureNode.cs" />
     <Compile Include="DataNodes\MeshNode.cs" />
-    <Compile Include="DataNodes\MeshSkinNode.cs" />
+    <Compile Include="DataNodes\SkinNode.cs" />
     <Compile Include="DataNodes\ModelNode.cs" />
     <Compile Include="DataNodes\ReferenceNode.cs" />
     <Compile Include="DataNodes\SpriteNode.cs" />
