Lots of motion stuff

--- a/MikuMikuLibrary/MikuMikuLibrary.csproj
+++ b/MikuMikuLibrary/MikuMikuLibrary.csproj
@@ -72,6 +72,7 @@
     <Compile Include="IO\Sections\EndOfFileSection.cs" />
     <Compile Include="IO\Sections\ISection.cs" />
     <Compile Include="IO\Sections\ModelSections.cs" />
+    <Compile Include="IO\Sections\MotionSection.cs" />
     <Compile Include="IO\Sections\RelocationTableSections.cs" />
     <Compile Include="IO\Sections\Section.cs" />
     <Compile Include="IO\Sections\SectionInfo.cs" />
@@ -99,11 +100,14 @@
     <Compile Include="Models\Processing\Stripifier\Utils.cs" />
     <Compile Include="Models\Processing\Stripifier\VertexCache.cs" />
     <Compile Include="Models\Processing\Stripifier.cs" />
-    <Compile Include="Motions\KeyFrame.cs" />
-    <Compile Include="Motions\KeyFrameSet.cs" />
+    <Compile Include="Motions\Key.cs" />
+    <Compile Include="Motions\KeyController.cs" />
+    <Compile Include="Motions\KeySet.cs" />
+    <Compile Include="Motions\KeySetVector.cs" />
     <Compile Include="Motions\Motion.cs" />
+    <Compile Include="Motions\MotionController.cs" />
     <Compile Include="Motions\MotionSet.cs" />
-    <Compile Include="Motions\KeyFrameType.cs" />
+    <Compile Include="Motions\KeySetType.cs" />
     <Compile Include="Sprites\SpriteCropper.cs" />
     <Compile Include="Sprites\SpriteOrganizer.cs" />
     <Compile Include="Textures\DDS\DDSCodec.cs" />
