Implement many things
* Parse material texture uv indices in index tables. This fixes shadowmap issues that were caused by resaving a model file
* Improve texture id generation
* Improve motion retargeting
* Add utility for replacing all occurrences of a substring in node names
* Implement exporting for texture nodes

--- a/MikuMikuModel/MikuMikuModel.csproj
+++ b/MikuMikuModel/MikuMikuModel.csproj
@@ -36,8 +36,8 @@
     <WarningLevel>4</WarningLevel>
     <Prefer32Bit>false</Prefer32Bit>
     <AllowedReferenceRelatedFileExtensions>
-		.MikuMikuNiShiteAgeru
-	</AllowedReferenceRelatedFileExtensions>
+        .MikuMikuNiShiteAgeru
+    </AllowedReferenceRelatedFileExtensions>
   </PropertyGroup>
   <PropertyGroup>
     <ApplicationIcon>MikuPoke.ico</ApplicationIcon>
@@ -98,6 +98,7 @@
     <Compile Include="Modules\Sprites\SpriteSetModule.cs" />
     <Compile Include="Modules\Textures\TextureModule.cs" />
     <Compile Include="Modules\Textures\TextureSetModule.cs" />
+    <Compile Include="Modules\Xml\XmlDocumentModule.cs" />
     <Compile Include="Nodes\Archives\FarcArchiveNode.cs" />
     <Compile Include="Nodes\Databases\SpriteDatabaseNode.cs" />
     <Compile Include="Nodes\Databases\TextureDatabaseNode.cs" />
