Fix motion retargeting and rename a namespace

--- a/MikuMikuModel/MikuMikuModel.csproj
+++ b/MikuMikuModel/MikuMikuModel.csproj
@@ -117,13 +117,13 @@
     <Compile Include="Nodes\Materials\MaterialTextureNode.cs" />
     <Compile Include="Nodes\Misc\ListNode.cs" />
     <Compile Include="Nodes\Misc\ReferenceNode.cs" />
-    <Compile Include="Nodes\Models\BoneInfoNode.cs" />
-    <Compile Include="Nodes\Models\ExDataNode.cs" />
-    <Compile Include="Nodes\Models\SubMeshNode.cs" />
-    <Compile Include="Nodes\Models\ObjectNode.cs" />
-    <Compile Include="Nodes\Models\ObjectSetNode.cs" />
-    <Compile Include="Nodes\Models\SkinNode.cs" />
-    <Compile Include="Nodes\Models\MeshNode.cs" />
+    <Compile Include="Nodes\Objects\BoneInfoNode.cs" />
+    <Compile Include="Nodes\Objects\ExDataNode.cs" />
+    <Compile Include="Nodes\Objects\SubMeshNode.cs" />
+    <Compile Include="Nodes\Objects\ObjectNode.cs" />
+    <Compile Include="Nodes\Objects\ObjectSetNode.cs" />
+    <Compile Include="Nodes\Objects\SkinNode.cs" />
+    <Compile Include="Nodes\Objects\MeshNode.cs" />
     <Compile Include="Nodes\Motions\BoneBindingNode.cs" />
     <Compile Include="Nodes\Motions\KeySetNode.cs" />
     <Compile Include="Nodes\Motions\KeyBindingNode.cs" />
